Fix dark mode hovering to keep text visible

--- a/src/components/gameScriptComponents/script.module.css
+++ b/src/components/gameScriptComponents/script.module.css
@@ -236,7 +236,7 @@
 
 
       &:hover {
-        background-color: #f0f0f0;
+        background-color: var(--ifm-hover-overlay);
       }
     }
   }
